src/main/java/com/example/jobis/global/error/exception/ErrorCode.java
package com.example.jobis.global.error.exception;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public enum ErrorCode {
    INTERNAL_SERVER_ERROR(500, "Internal Server Error");
    private final Integer status;
    private final String message;
}
